change unicode "&#x25E6;" to "*" to make translations work (LP: #344693) and unfuzzy translations

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,8 @@ update-manager (1:0.126.6) UNRELEASED; urgency=low
       download window size
   * DistUpgrade/xorg_fix_proprietary.py:
     - if xorg.conf is zero size, remove it (LP: # 439551)
+  * change unicode "&#x25E6;" to "*" to make translations
+    work (LP: #344693) and unfuzzy translations
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Oct 2009 18:02:51 +0200
 
