--- a/po/ar.po
+++ b/po/ar.po
@@ -1767,10 +1767,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "لا يمكن إحصاء ترقية عادية، من فضلك نفّذ: \n"
@@ -1778,10 +1778,10 @@ msgstr ""
 "\n"
 "\n"
 "هذا قد ينتج عن:\n"
-" ◦ ترقية سابقة لم تكتمل\n"
-" ◦ مشاكل مع بعض البرمجيات المثبتة\n"
-" ◦ حزم برمجيات غير رسمية ليست مقدمة من أوبونتو\n"
-" ◦ تغييرات عاديةو لنسخة ما قبل الإصدار من أوبونتو."
+" * ترقية سابقة لم تكتمل\n"
+" * مشاكل مع بعض البرمجيات المثبتة\n"
+" * حزم برمجيات غير رسمية ليست مقدمة من أوبونتو\n"
+" * تغييرات عاديةو لنسخة ما قبل الإصدار من أوبونتو."
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1929,18 +1929,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "شغّل ترقية جزئية لتنزيل أكبر عدد ممكن من التحديثات. \n"
 "\n"
 "قد يكون هذا بسبب:\n"
-"&#x25E6; ترقية سابقة لم تكتمل\n"
-"&#x25E6; مشاكل مع بعض البرمجيات المثبتة\n"
-"&#x25E6; حزم برمجيات غير رسمية ليست من أوبونتو\n"
-"&#x25E6; تغييرات عادية في نسخة ما قبل الإصدار من أوبونتو"
+"* ترقية سابقة لم تكتمل\n"
+"* مشاكل مع بعض البرمجيات المثبتة\n"
+"* حزم برمجيات غير رسمية ليست من أوبونتو\n"
+"* تغييرات عادية في نسخة ما قبل الإصدار من أوبونتو"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
