--- a/po/ast.po
+++ b/po/ast.po
@@ -1786,10 +1786,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Nun pude facese un anovamientu normal, por favor execute: \n"
@@ -1797,10 +1797,10 @@ msgstr ""
 "\n"
 "\n"
 "Esto puede tar provocao por:\n"
-" ◦ Una anovación anterior incompleta\n"
-" ◦ Problemes con dalgún software instaláu\n"
-" ◦ Paquetes non oficiales de software, non provistos por Ubuntu\n"
-" ◦ Cambeos normales nuna versión de pre-llanzamientu d'Ubuntu"
+" * Una anovación anterior incompleta\n"
+" * Problemes con dalgún software instaláu\n"
+" * Paquetes non oficiales de software, non provistos por Ubuntu\n"
+" * Cambeos normales nuna versión de pre-llanzamientu d'Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1949,19 +1949,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Executar un anovamientu parcial, pa instalar tantos anovamientos como seya "
 "dable. \n"
 "\n"
 "Esto puede debese a:\n"
-" &#x25E6; Un anovamientu anterior que nun se completó\n"
-" &#x25E6; Problemes con dalgunos de los programes instalaos\n"
-" &#x25E6; Paquetes de software non oficiales nin distribuyíos por Ubuntu\n"
-" &#x25E6; Los cambeos normales d'una versión preliminar d'Ubuntu"
+" * Un anovamientu anterior que nun se completó\n"
+" * Problemes con dalgunos de los programes instalaos\n"
+" * Paquetes de software non oficiales nin distribuyíos por Ubuntu\n"
+" * Los cambeos normales d'una versión preliminar d'Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
