--- a/po/bg.po
+++ b/po/bg.po
@@ -1774,10 +1774,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Нормално надграждане не може да бъде изчислено, моля изпълнете: \n"
@@ -1785,10 +1785,10 @@ msgstr ""
 "\n"
 "\n"
 "Това може да се случи поради:\n"
-" ◦ Предишно надграждане, което не е завършило\n"
-" ◦ Проблеми с част от инсталирания софтуер\n"
-" ◦ Неофициални пакети, които не са предоставени от Ubuntu\n"
-" ◦ Нормални промени в предварителна версия на Ubuntu"
+" * Предишно надграждане, което не е завършило\n"
+" * Проблеми с част от инсталирания софтуер\n"
+" * Неофициални пакети, които не са предоставени от Ubuntu\n"
+" * Нормални промени в предварителна версия на Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1940,18 +1940,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Частично надграждане, за да се инсталират възможно най-много актуализации. \n"
 "\n"
 "Това може да се случи заради:\n"
-" &#x25E6; Предишно надграждане, което не е завършило\n"
-" &#x25E6; Проблеми с някой от инсталирания софтуер\n"
-" &#x25E6; Неофициални пакети, които не са предоставени от Ubuntu\n"
-" &#x25E6; Нормални промени от предварителна версия на Ubuntu"
+" * Предишно надграждане, което не е завършило\n"
+" * Проблеми с някой от инсталирания софтуер\n"
+" * Неофициални пакети, които не са предоставени от Ubuntu\n"
+" * Нормални промени от предварителна версия на Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
