--- a/po/ca.po
+++ b/po/ca.po
@@ -1760,10 +1760,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "No es pot calcular una actualització normal, executeu: \n"
@@ -1771,10 +1771,10 @@ msgstr ""
 "\n"
 "\n"
 "Les causes d'això poden ser:\n"
-" ◦ Una actualització prèvia no s'ha completat\n"
-" ◦ Problemes amb programari instal·lat\n"
-" ◦ Paquets de programari no oficial que no estan proveïts per l'Ubuntu\n"
-" ◦ Canvis normals en una versió de desenvolupament de l'Ubuntu"
+" * Una actualització prèvia no s'ha completat\n"
+" * Problemes amb programari instal·lat\n"
+" * Paquets de programari no oficial que no estan proveïts per l'Ubuntu\n"
+" * Canvis normals en una versió de desenvolupament de l'Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1926,10 +1926,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
