--- a/po/cs.po
+++ b/po/cs.po
@@ -1768,10 +1768,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Normální aktualizace nemohla být připravena, prosím spusťte: \n"
@@ -1779,10 +1779,10 @@ msgstr ""
 "\n"
 "\n"
 "To může být způsobeno:\n"
-" ◦ Předchozí aktualizace nebyla dokončena\n"
-" ◦ Problémy s nainstalovaným softwarem\n"
-" ◦ Neoficiální softwarové balíky neposkytované od Ubuntu\n"
-" ◦ Normální změny v předprodukční verzi Ubuntu"
+" * Předchozí aktualizace nebyla dokončena\n"
+" * Problémy s nainstalovaným softwarem\n"
+" * Neoficiální softwarové balíky neposkytované od Ubuntu\n"
+" * Normální změny v předprodukční verzi Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1926,10 +1926,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
