--- a/po/da.po
+++ b/po/da.po
@@ -1782,21 +1782,21 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "En normal opgradering kan ikke beregnes. Kør venligst: \n"
 "  sudo apt-get dist-upgrade\n"
 "\n"
 "\n"
-" ◦ Dette kan være af følgende grunde:\n"
-" ◦ En tidligere opgradering, der ikke blev fuldført\n"
-" ◦ Problemer med noget af det installerede software\n"
-" ◦ Uofficielle softwarepakker, der ikke leveres af Ubuntu\n"
-" ◦ Normale ændringer i en udviklingsudgave af Ubuntu"
+" * Dette kan være af følgende grunde:\n"
+" * En tidligere opgradering, der ikke blev fuldført\n"
+" * Problemer med noget af det installerede software\n"
+" * Uofficielle softwarepakker, der ikke leveres af Ubuntu\n"
+" * Normale ændringer i en udviklingsudgave af Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1947,19 +1947,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Kør en delvis opgradering for at installere så mange opdateringer, som "
 "muligt. \n"
 "\n"
 "Dette kan skyldes:\n"
-"&#x25E6; En tidligere opdatering, som ikke blev fuldført\n"
-"&#x25E6; Problemer med dele af den installerede software\n"
-"&#x25E6; Uofficielle softwarepakker, som ikke er leveret af Ubuntu\n"
-"&#x25E6; Normale ændringer i en før udgivelse-version af Ubuntu"
+"* En tidligere opdatering, som ikke blev fuldført\n"
+"* Problemer med dele af den installerede software\n"
+"* Uofficielle softwarepakker, som ikke er leveret af Ubuntu\n"
+"* Normale ændringer i en før udgivelse-version af Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
