--- a/po/de.po
+++ b/po/de.po
@@ -1834,10 +1834,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Eine normale Aktualisierung kann nicht berechnet werden. Bitte führen Sie "
@@ -1846,10 +1846,10 @@ msgstr ""
 "\n"
 "\n"
 "Dieser Fehler kann verursacht werden durch:\n"
-" ◦ Eine vorangegangene Aktualisierung, die nicht beendet wurde\n"
-" ◦ Probleme mit installierten Anwendungen\n"
-" ◦ Inoffizielle Pakete, die nicht von Ubuntu bereitgestellt werden\n"
-" ◦ Änderungen in einer Vorabversion von Ubuntu"
+" * Eine vorangegangene Aktualisierung, die nicht beendet wurde\n"
+" * Probleme mit installierten Anwendungen\n"
+" * Inoffizielle Pakete, die nicht von Ubuntu bereitgestellt werden\n"
+" * Änderungen in einer Vorabversion von Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -2001,19 +2001,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Teilaktualisierung ausführen, um so viele Aktualisierungen wie möglich zu "
 "installieren. \n"
 "\n"
 "Dies kann folgende Ursache haben:\n"
-" &#x25E6; Eine vorangegangene Aktualisierung wurde nicht abgeschlossen\n"
-" &#x25E6; Probleme mit einiger der installierten Software\n"
-" &#x25E6; Nicht-offizielle Software-Pakete, die nicht aus Ubuntu stammen\n"
-" &#x25E6; Normale Änderungen in einer Vorabversion von Ubuntu"
+" * Eine vorangegangene Aktualisierung wurde nicht abgeschlossen\n"
+" * Probleme mit einiger der installierten Software\n"
+" * Nicht-offizielle Software-Pakete, die nicht aus Ubuntu stammen\n"
+" * Normale Änderungen in einer Vorabversion von Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
