--- a/po/el.po
+++ b/po/el.po
@@ -1778,10 +1778,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Μια κανονική αναβάθμιση δεν μπορεί να υπολογιστεί, οπότε σας παρακαλούμε να "
@@ -1790,10 +1790,10 @@ msgstr ""
 "\n"
 "\n"
 "Αυτό το πρόβλημα μπορεί να προκλήθηκε από:\n"
-"◦ Μια προηγούμενη αναβάθμιση η οποία δεν ολοκληρώθηκε\n"
-"◦ Προβλήματα με κάποια από τα ήδη εγκατεστημένα προγράμματα\n"
-"◦ Ανεπίσημα πακέτα λογισμικού που δεν παρέχονται από το Ubuntu\n"
-"◦ Κανονικές αλλαγές σε προεκδόσεις του Ubuntu"
+"* Μια προηγούμενη αναβάθμιση η οποία δεν ολοκληρώθηκε\n"
+"* Προβλήματα με κάποια από τα ήδη εγκατεστημένα προγράμματα\n"
+"* Ανεπίσημα πακέτα λογισμικού που δεν παρέχονται από το Ubuntu\n"
+"* Κανονικές αλλαγές σε προεκδόσεις του Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1943,10 +1943,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
