--- a/po/es.po
+++ b/po/es.po
@@ -1810,10 +1810,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "No se puede llevar a cabo una actualización normal, ejecute: \n"
@@ -1821,10 +1821,10 @@ msgstr ""
 "\n"
 "\n"
 "Esto puede estar provocado por:\n"
-" ◦ Una actualización anterior incompleta\n"
-" ◦ Problemas con algún software instalado\n"
-" ◦ Paquetes no oficiales de software, no provistos por Ubuntu\n"
-" ◦ Cambios normales en una versión de prelanzamiento de Ubuntu"
+" * Una actualización anterior incompleta\n"
+" * Problemas con algún software instalado\n"
+" * Paquetes no oficiales de software, no provistos por Ubuntu\n"
+" * Cambios normales en una versión de prelanzamiento de Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1975,19 +1975,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Ejecutar una actualización parcial, para instalar tantas actualizaciones "
 "como sea posible. \n"
 "\n"
 "Esto puede ser debido a:\n"
-" &#x25E6; Una actualización anterior que no se ha completado\n"
-" &#x25E6; Problemas con algunos de los programas instalados\n"
-" &#x25E6; Paquetes de software no oficiales ni distribuidos por Ubuntu\n"
-" &#x25E6; Los cambios normales de una versión preliminar de Ubuntu"
+" * Una actualización anterior que no se ha completado\n"
+" * Problemas con algunos de los programas instalados\n"
+" * Paquetes de software no oficiales ni distribuidos por Ubuntu\n"
+" * Los cambios normales de una versión preliminar de Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
