--- a/po/fi.po
+++ b/po/fi.po
@@ -1776,10 +1776,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Tavallista päivitystä ei voi laskea. Suorita: \n"
@@ -1787,10 +1787,10 @@ msgstr ""
 "\n"
 "\n"
 "Tämä voi johtua seuraavista asioista:\n"
-" ◦ Edellinen päivitys ei valmistunut\n"
-" ◦ Ongelmia joidenkin asennettujen ohjelmistojen kanssa\n"
-" ◦ Käytössä on epävirallisia ohjelmapaketteja, joita Ubuntu ei tarjoa\n"
-" ◦ Kyse on tavallisista muutoksista Ubuntun esijulkaisuversiossa"
+" * Edellinen päivitys ei valmistunut\n"
+" * Ongelmia joidenkin asennettujen ohjelmistojen kanssa\n"
+" * Käytössä on epävirallisia ohjelmapaketteja, joita Ubuntu ei tarjoa\n"
+" * Kyse on tavallisista muutoksista Ubuntun esijulkaisuversiossa"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1938,19 +1938,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Tee osittainen päivitys ja päivitä niin monta ohjelmapakettia kuin "
 "mahdollista. \n"
 "\n"
 "Tähän tilanteeseen päädytään seuraavista syistä:\n"
-" &#x25E6; Edellistä päivitystä ei suoritettu loppuun asti\n"
-" &#x25E6; Jonkun asennetun ohjelman kanssa on ongelmia\n"
-" &#x25E6; Järjestelmään on asennettu kolmannen osapuolen ohjelmapaketeja\n"
-" &#x25E6; Ubuntun esiversion normaalit muutokset estävät päivityksen"
+" * Edellistä päivitystä ei suoritettu loppuun asti\n"
+" * Jonkun asennetun ohjelman kanssa on ongelmia\n"
+" * Järjestelmään on asennettu kolmannen osapuolen ohjelmapaketeja\n"
+" * Ubuntun esiversion normaalit muutokset estävät päivityksen"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
