--- a/po/fr.po
+++ b/po/fr.po
@@ -1818,10 +1818,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Impossible d'effectuer une mise à niveau normale, veuillez lancer : \n"
@@ -1829,10 +1829,10 @@ msgstr ""
 "\n"
 "\n"
 "Ceci peut être dû à :\n"
-" ◦ une mise à niveau précédente qui n'a pas été terminée ;\n"
-" ◦ des problèmes avec certains logiciels installés ;\n"
-" ◦ des paquets non officiels non fournis par Ubuntu ;\n"
-" ◦ des modifications normales liées à une pré version d'Ubuntu."
+" * une mise à niveau précédente qui n'a pas été terminée ;\n"
+" * des problèmes avec certains logiciels installés ;\n"
+" * des paquets non officiels non fournis par Ubuntu ;\n"
+" * des modifications normales liées à une pré version d'Ubuntu."
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1988,18 +1988,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Exécute une mise à niveau partielle pour installer autant de mises à jour "
 "que possible.  \n"
 "Ceci peut être dû à :\n"
-" &#x25E6; une précédente mise à niveau incomplète ;\n"
-" &#x25E6; des problèmes avec certains logiciels installés ;\n"
-" &#x25E6; des paquets non officiels, non fournis par Ubuntu ;\n"
-" &#x25E6; des changements normaux d'une pré-version d'Ubuntu."
+" * une précédente mise à niveau incomplète ;\n"
+" * des problèmes avec certains logiciels installés ;\n"
+" * des paquets non officiels, non fournis par Ubuntu ;\n"
+" * des changements normaux d'une pré-version d'Ubuntu."
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
