--- a/po/gl.po
+++ b/po/gl.po
@@ -1789,10 +1789,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Unha actualización normal non se pode calcular; execute:\n"
@@ -1800,10 +1800,10 @@ msgstr ""
 "\n"
 "\n"
 "Isto pode ser causado por:\n"
-" ◦ Unha actualización previa que non se completou\n"
-" ◦ Problemas con algún software instalado\n"
-" ◦ Paquetes de software non oficiais que non fornece Ubuntu\n"
-" ◦ Cambios normais de unha versión de prelanzamento de Ubuntu"
+" * Unha actualización previa que non se completou\n"
+" * Problemas con algún software instalado\n"
+" * Paquetes de software non oficiais que non fornece Ubuntu\n"
+" * Cambios normais de unha versión de prelanzamento de Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1953,19 +1953,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Executar unha actualización parcial para instalar cantas actualizacións "
 "sexan posíbeis. \n"
 "\n"
 "Isto pódese deber a:\n"
-" &#x25E6; Unha actualización anterior da versión que non rematou\n"
-" &#x25E6; Problemas con algún software instalado\n"
-" &#x25E6; Paquetes de software non oficiais non fornecidos por Ubuntu\n"
-" &#x25E6; Alteracións normais dunha versión previa á publicación de Ubuntu"
+" * Unha actualización anterior da versión que non rematou\n"
+" * Problemas con algún software instalado\n"
+" * Paquetes de software non oficiais non fornecidos por Ubuntu\n"
+" * Alteracións normais dunha versión previa á publicación de Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
