--- a/po/he.po
+++ b/po/he.po
@@ -1721,10 +1721,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "לא ניתן לחשוב שדרוג רגיל, אנא הרץ את הפקודה: \n"
@@ -1732,10 +1732,10 @@ msgstr ""
 "\n"
 "\n"
 "תקלה זו עלולה להגרם עקב:\n"
-" ◦ שדרוג שלא הושלם בעבר\n"
-" ◦ בעיות בחלק מהתוכנות המותקנות\n"
-" ◦ חבילות תוכנה לא רשמיות שלא מסופקות על ידי אובונטו\n"
-" ◦ שינויים סדירים של גרסת טרום הפצה של אובונטו"
+" * שדרוג שלא הושלם בעבר\n"
+" * בעיות בחלק מהתוכנות המותקנות\n"
+" * חבילות תוכנה לא רשמיות שלא מסופקות על ידי אובונטו\n"
+" * שינויים סדירים של גרסת טרום הפצה של אובונטו"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1883,18 +1883,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "הרצת שדרוג חלקי, כדי להתקין כמה שיותר עדכונים. \n"
 "\n"
 "מצב זה עלול להגרם עקב:\n"
-" &#x25E6; שדרוג קודם שלא הושלם\n"
-" &#x25E6; בעיות עם כמה מהתוכנות המותקנות\n"
-" &#x25E6; חבילות תוכנה בלתי רשמיות שלא סופקו על ידי אובונטו\n"
-" &#x25E6; שינויים רגילים של גרסת טרום־הפצה של אובונטו"
+" * שדרוג קודם שלא הושלם\n"
+" * בעיות עם כמה מהתוכנות המותקנות\n"
+" * חבילות תוכנה בלתי רשמיות שלא סופקו על ידי אובונטו\n"
+" * שינויים רגילים של גרסת טרום־הפצה של אובונטו"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
