--- a/po/hr.po
+++ b/po/hr.po
@@ -1796,10 +1796,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Normalna dopuna nije mogla biti izračunata, molim pokrenite: \n"
@@ -1807,10 +1807,10 @@ msgstr ""
 "\n"
 "\n"
 "Mogući uzrok problema:\n"
-" ◦ prethodna nadogranja koja nije dovršena\n"
-" ◦ problemi s nekim od instaliranih programa\n"
-" ◦ neslužbeni softverski paketi koji ne dolaze uz Ubuntu\n"
-" ◦ normalne promjene razvojne inačice Ubuntua"
+" * prethodna nadogranja koja nije dovršena\n"
+" * problemi s nekim od instaliranih programa\n"
+" * neslužbeni softverski paketi koji ne dolaze uz Ubuntu\n"
+" * normalne promjene razvojne inačice Ubuntua"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1959,19 +1959,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Pokreni djelomičnu nadogradnju da bi se instaliralo što je moguće više "
 "dopuna. \n"
 "\n"
 "Uzrok problema može biti:\n"
-" &#x25E6; Prethodna nadogradnja koja nije dovršena\n"
-" &#x25E6; Problem s nekim od instaliranih programa\n"
-" &#x25E6; Neslužbeni softverski paketi koji ne dolaze uz Ubuntu\n"
-" &#x25E6; Normalne promjene razvojne inačice Ubuntua"
+" * Prethodna nadogradnja koja nije dovršena\n"
+" * Problem s nekim od instaliranih programa\n"
+" * Neslužbeni softverski paketi koji ne dolaze uz Ubuntu\n"
+" * Normalne promjene razvojne inačice Ubuntua"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
