--- a/po/hu.po
+++ b/po/hu.po
@@ -1786,10 +1786,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Nem tudtam előkészíteni hagyományos frissítést. Kérem futassa parancssorban "
@@ -1798,10 +1798,10 @@ msgstr ""
 "\n"
 "\n"
 "A fenti problémát okozhatta:\n"
-" ◦ egy folyamatban lévő frissítés\n"
-" ◦ problémák egy telepített programmal\n"
-" ◦ nemhivatalos csomagok, amiket nem az Ubuntu biztosít\n"
-" ◦ szokásos változások egy kiadás előtti Ubuntu verzióban."
+" * egy folyamatban lévő frissítés\n"
+" * problémák egy telepített programmal\n"
+" * nemhivatalos csomagok, amiket nem az Ubuntu biztosít\n"
+" * szokásos változások egy kiadás előtti Ubuntu verzióban."
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1950,18 +1950,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Részleges frissítés futtatása, a lehető legtöbb frissítés telepítése "
 "érdekében. Ezt\n"
 "\n"
-" ◦ egy korábbi befejezetlen frissítés;\n"
-" ◦ egyes telepített szoftverekkel kapcsolatos problémák;\n"
-" ◦ nem hivatalos, nem az Ubuntu által szállított szoftvercsomagok vagy\n"
-" ◦ az Ubuntu fejlesztői verziójának normális változásai okozhatják."
+" * egy korábbi befejezetlen frissítés;\n"
+" * egyes telepített szoftverekkel kapcsolatos problémák;\n"
+" * nem hivatalos, nem az Ubuntu által szállított szoftvercsomagok vagy\n"
+" * az Ubuntu fejlesztői verziójának normális változásai okozhatják."
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
