--- a/po/id.po
+++ b/po/id.po
@@ -1761,10 +1761,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Proses upgrade normal tidak dapat dikalkulasi, silahkan jalankan: \n"
@@ -1772,10 +1772,10 @@ msgstr ""
 "\n"
 "\n"
 "Hal ini dapat disebabkan oleh:\n"
-" ◦ Proses upgrade sebelumnya tidak selesai\n"
-" ◦ Masalah dengan beberapa perangkat lunak yang dipasang\n"
-" ◦ Perangkat lunak yang tidak secara resmi disediakan oleh Ubuntu\n"
-" ◦ Perubahan normal pada sebuah versi pre-release Ubuntu"
+" * Proses upgrade sebelumnya tidak selesai\n"
+" * Masalah dengan beberapa perangkat lunak yang dipasang\n"
+" * Perangkat lunak yang tidak secara resmi disediakan oleh Ubuntu\n"
+" * Perubahan normal pada sebuah versi pre-release Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1928,18 +1928,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Jalankan peningkatan sebagian, untuk memasang sebanyak mungkin. \n"
 "\n"
 "Ini dapat disebabkan oleh:\n"
-" &#x25E6; Peningkatan sebelumnya yang tak lengkap\n"
-" &#x25E6; Masalah dengan beberapa perangkat lunak terpasang\n"
-" &#x25E6; Paket perangkat lunak tak resmi yang bukan disediakan oleh Ubuntu\n"
-" &#x25E6; Perubahan normal dari versi prarilis Ubuntu"
+" * Peningkatan sebelumnya yang tak lengkap\n"
+" * Masalah dengan beberapa perangkat lunak terpasang\n"
+" * Paket perangkat lunak tak resmi yang bukan disediakan oleh Ubuntu\n"
+" * Perubahan normal dari versi prarilis Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
