--- a/po/is.po
+++ b/po/is.po
@@ -1718,10 +1718,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Ekki var mögulegt að reikna venjulega uppfærslu, vinsamlegast keyrið: \n"
@@ -1729,10 +1729,10 @@ msgstr ""
 "\n"
 "\n"
 "Örsakavaldur getur verið eftirfarandi:\n"
-" ◦ Fyrri uppfærsla kláraði sig ekki sem skildi\n"
-" ◦ Vandamál í einhverjum uppsettum hugbúnaði\n"
-" ◦ Óformlegir hugbúnaðarpakkar sem ekki er á vegum Ubuntu\n"
-" ◦ Venjubundnar breytingar á prufu útgáfu Ubuntu"
+" * Fyrri uppfærsla kláraði sig ekki sem skildi\n"
+" * Vandamál í einhverjum uppsettum hugbúnaði\n"
+" * Óformlegir hugbúnaðarpakkar sem ekki er á vegum Ubuntu\n"
+" * Venjubundnar breytingar á prufu útgáfu Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1876,10 +1876,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
