--- a/po/ja.po
+++ b/po/ja.po
@@ -1652,10 +1652,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "通常のアップグレードの見積もりが行えませんでした。以下を実行してください: \n"
@@ -1663,10 +1663,10 @@ msgstr ""
 "\n"
 "\n"
 "以下の原因が考えられます:\n"
-" ◦ 前回のアップグレードが完了していなかった。\n"
-" ◦ インストールしたソフトウェアのどれかに問題がある。\n"
-" ◦ Ubuntu が提供していない、非公式なパッケージを利用している。\n"
-" ◦ Ubuntu のリリース前バージョンにおける、通常の変更。"
+" * 前回のアップグレードが完了していなかった。\n"
+" * インストールしたソフトウェアのどれかに問題がある。\n"
+" * Ubuntu が提供していない、非公式なパッケージを利用している。\n"
+" * Ubuntu のリリース前バージョンにおける、通常の変更。"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1810,18 +1810,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "できる限り多くのアップデートをインストールするため、部分アップグレードを実行します。 \n"
 "\n"
 "以下の原因が考えられます:\n"
-"&#x25E6; 以前のアップグレードが完了していなかった。\n"
-"&#x25E6; インストールしたソフトウェアのどれかに問題がある。\n"
-"&#x25E6; Ubuntu が提供していない、非公式なパッケージを使用している。\n"
-"&#x25E6; 開発版 Ubuntu を利用している（開発版における通常の変更）。"
+"* 以前のアップグレードが完了していなかった。\n"
+"* インストールしたソフトウェアのどれかに問題がある。\n"
+"* Ubuntu が提供していない、非公式なパッケージを使用している。\n"
+"* 開発版 Ubuntu を利用している（開発版における通常の変更）。"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
