--- a/po/ko.po
+++ b/po/ko.po
@@ -1664,10 +1664,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "일반적인 업그레이드로 추정할 수 없음. 다음을 실행하십시오:\n"
@@ -1675,10 +1675,10 @@ msgstr ""
 "\n"
 "\n"
 "이것의 원인이 되는 것은:\n"
-" ◦ 이전 업그레이드가 완료되지 않음\n"
-" ◦ 설치된 소프트웨어 몇 가지에서의 문제\n"
-" ◦ 우분투에서 제공하지 않는 비공식 소프트웨어 패키지\n"
-" ◦ 프리 릴리즈 버전 우분투의 일상적인 변경"
+" * 이전 업그레이드가 완료되지 않음\n"
+" * 설치된 소프트웨어 몇 가지에서의 문제\n"
+" * 우분투에서 제공하지 않는 비공식 소프트웨어 패키지\n"
+" * 프리 릴리즈 버전 우분투의 일상적인 변경"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1825,10 +1825,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
