--- a/po/lt.po
+++ b/po/lt.po
@@ -1798,10 +1798,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Paprastas atnaujinimas negali būti apskaičiuotas, paleiskite: \n"
@@ -1809,10 +1809,10 @@ msgstr ""
 "\n"
 "\n"
 "Tai gali būti sukelta:\n"
-" ◦ Ankstesnio nepabaigto atnaujinimo\n"
-" ◦ Problemų su kai kuria įdiegta programine įranga\n"
-" ◦ Ubuntu netiekiamų neoficialių programinės įrangos paketų\n"
-" ◦ Normalių neišleistos Ubuntu versijos pakeitimų"
+" * Ankstesnio nepabaigto atnaujinimo\n"
+" * Problemų su kai kuria įdiegta programine įranga\n"
+" * Ubuntu netiekiamų neoficialių programinės įrangos paketų\n"
+" * Normalių neišleistos Ubuntu versijos pakeitimų"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1960,18 +1960,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Vykdyti dalinį atnaujinimą ir įdiegti kiek įmanoma daugiau \n"
 "\n"
 "Tai gali būti sukelta:\n"
-" &#x25E6; Ankstesnio nebaigto atnaujinimo\n"
-" &#x25E6; Problemų su kai kuria įdiegta programine įranga\n"
-" &#x25E6; Ubuntu netiekiamų neoficialių programinės įrangos paketų\n"
-" &#x25E6; Neišleistos Ubuntu versijos normalių pakeitimų"
+" * Ankstesnio nebaigto atnaujinimo\n"
+" * Problemų su kai kuria įdiegta programine įranga\n"
+" * Ubuntu netiekiamų neoficialių programinės įrangos paketų\n"
+" * Neišleistos Ubuntu versijos normalių pakeitimų"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
