--- a/po/nb.po
+++ b/po/nb.po
@@ -1785,10 +1785,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "En vanlig oppgradering kan ikke beregnes, kjør i stedet: \n"
@@ -1950,19 +1950,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Kjør en delvis oppgradering, for å installere så mange oppdateringer som "
 "mulig. \n"
 "\n"
 "Dette kan forårsakes av:\n"
-" &#x25E6; En tidligere ikke-ferdig oppgradering\n"
-" &#x25E6; Problemer med noe av den installerte programvaren\n"
-" &#x25E6; Uoffisielle programpakker som ikke kommer via Ubuntu\n"
-" &#x25E6; Normale endringer av en Ubuntu-versjon som ikke er endelig."
+" * En tidligere ikke-ferdig oppgradering\n"
+" * Problemer med noe av den installerte programvaren\n"
+" * Uoffisielle programpakker som ikke kommer via Ubuntu\n"
+" * Normale endringer av en Ubuntu-versjon som ikke er endelig."
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
