--- a/po/nds.po
+++ b/po/nds.po
@@ -1814,10 +1814,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Eine normale Aktualisierung kann nicht berechnet werden. Bitte führen Sie "
@@ -1826,10 +1826,10 @@ msgstr ""
 "\n"
 "\n"
 "Dieser Fehler kann verursacht werden durch:\n"
-" ◦ Eine vorangegangene Aktualisierung, die nicht beendet wurde\n"
-" ◦ Probleme mit installierten Anwendungen\n"
-" ◦ Inoffizielle Pakete, die nicht von Ubuntu bereitgestellt werden\n"
-" ◦ Änderungen in einer Vorabversion von Ubuntu"
+" * Eine vorangegangene Aktualisierung, die nicht beendet wurde\n"
+" * Probleme mit installierten Anwendungen\n"
+" * Inoffizielle Pakete, die nicht von Ubuntu bereitgestellt werden\n"
+" * Änderungen in einer Vorabversion von Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1981,18 +1981,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Starten sie ein partielles Upgrade, um so viel Updates wie möglich zu "
 "Installieren. \n"
 "\n"
-" &#x25E6; Ein früheres Upgrade wurde nicht vollständig Installiert\n"
-" &#x25E6; Probleme mit bereits Installiertem Software\n"
-" &#x25E6; Nicht von Ubuntu unterstützte Software Pakete\n"
-" &#x25E6; Normale Änderungen von Vorab Versionen von Ubuntu"
+" * Ein früheres Upgrade wurde nicht vollständig Installiert\n"
+" * Probleme mit bereits Installiertem Software\n"
+" * Nicht von Ubuntu unterstützte Software Pakete\n"
+" * Normale Änderungen von Vorab Versionen von Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
