--- a/po/pl.po
+++ b/po/pl.po
@@ -1812,10 +1812,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Zwykła aktualzacja nie mogła zostać obliczona, proszę uruchomić: \n"
@@ -1823,10 +1823,10 @@ msgstr ""
 "\n"
 "\n"
 "Może to być spowodowane przez:\n"
-" ◦ Niedokończony poprzedni proces aktualizacji\n"
-" ◦ Problemy z niektórymi pakietami oprogramowania\n"
-" ◦ Nieoficjalnymi pakietami spoza repozytorium Ubuntu\n"
-" ◦ Normalnymi zmianiami w testowej wersji Ubuntu"
+" * Niedokończony poprzedni proces aktualizacji\n"
+" * Problemy z niektórymi pakietami oprogramowania\n"
+" * Nieoficjalnymi pakietami spoza repozytorium Ubuntu\n"
+" * Normalnymi zmianiami w testowej wersji Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1975,19 +1975,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Należy uruchomić częściową aktualizację, aby zainstalować jak najwięcej "
 "aktualizacji. \n"
 "\n"
 "Może to być spowodowane przez:\n"
-" &#x25E6; Poprzednio nieukończoną aktualizację\n"
-" &#x25E6; Problemy z zainstalowanym oprogramowaniem\n"
-" &#x25E6; Nieoficjalne pakiety, niedostarczone przez Ubuntu\n"
-" &#x25E6; Normalne zmiany testowej wersji Ubuntu"
+" * Poprzednio nieukończoną aktualizację\n"
+" * Problemy z zainstalowanym oprogramowaniem\n"
+" * Nieoficjalne pakiety, niedostarczone przez Ubuntu\n"
+" * Normalne zmiany testowej wersji Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
