--- a/po/pt.po
+++ b/po/pt.po
@@ -1791,10 +1791,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Uma actualização normal não pode ser calculada, por favor corra: \n"
@@ -1955,19 +1955,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Fazer uma actualização parcial, para instalar o maior número possível de "
 "actualizações. \n"
 "\n"
 "Isto pode ser causado por:\n"
-" &#x25E6; Uma actualização anterior não completa\n"
-" &#x25E6; Problemas com algum do software instalado\n"
-" &#x25E6; Pacotes de software não-oficiais não fornecidos pelo Ubuntu\n"
-" &#x25E6; Mudanças normais de uma versão pré-lançamento do Ubuntu"
+" * Uma actualização anterior não completa\n"
+" * Problemas com algum do software instalado\n"
+" * Pacotes de software não-oficiais não fornecidos pelo Ubuntu\n"
+" * Mudanças normais de uma versão pré-lançamento do Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
