--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1788,10 +1788,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Uma atualização normal não pode ser calculada, por favor execute: \n"
@@ -1799,10 +1799,10 @@ msgstr ""
 "\n"
 "\n"
 "Isto pode ser causado por:\n"
-" ◦ Uma atualização anterior que não foi concluída\n"
-" ◦ Problemas com algum software instalado\n"
-" ◦ Pacotes de software não-oficiais não fornecidos pelo Ubuntu\n"
-" ◦ Alterações normais de uma versão de pré-lançamento do Ubuntu"
+" * Uma atualização anterior que não foi concluída\n"
+" * Problemas com algum software instalado\n"
+" * Pacotes de software não-oficiais não fornecidos pelo Ubuntu\n"
+" * Alterações normais de uma versão de pré-lançamento do Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1954,19 +1954,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Execute uma atualização parcial, para instalar as quantas atualizações forem "
 "possíveis. \n"
 "\n"
 "Isso pode ser causado por:\n"
-" &#x25E6; Uma atualização anterior que não foi concluída\n"
-" &#x25E6; Problemas com alguns dos softwares instalados\n"
-" &#x25E6; Pacotes não-oficiais de programa não fornecidos pelo Ubuntu\n"
-" &#x25E6; Alterações normais de uma versão pré-lançamento do Ubuntu"
+" * Uma atualização anterior que não foi concluída\n"
+" * Problemas com alguns dos softwares instalados\n"
+" * Pacotes não-oficiais de programa não fornecidos pelo Ubuntu\n"
+" * Alterações normais de uma versão pré-lançamento do Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
