--- a/po/ro.po
+++ b/po/ro.po
@@ -1803,10 +1803,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Nu poate fi calculată o actualizare normală, executați:\n"
@@ -1814,10 +1814,10 @@ msgstr ""
 "\n"
 "\n"
 "Acest lucru poate fi cauzat de:\n"
-" ◦ O actualizare precedentă ce nu a fost încheiată\n"
-" ◦ Probleme în legătură cu unele aplicații instalate\n"
-" ◦ Pachete de programe neoficiale care nu au fost furnizate de Ubuntu\n"
-" ◦ Modificări normale ale unei versiuni încă ne-publicate de Ubuntu"
+" * O actualizare precedentă ce nu a fost încheiată\n"
+" * Probleme în legătură cu unele aplicații instalate\n"
+" * Pachete de programe neoficiale care nu au fost furnizate de Ubuntu\n"
+" * Modificări normale ale unei versiuni încă ne-publicate de Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1968,19 +1968,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Pornește o actualizare parțială, pentru a instala cât mai multe pachete "
 "posibile. \n"
 "\n"
 "Aceasta poate fi cauzată de:\n"
-" &#x25E6; O actualizare anterioară nefinalizată\n"
-" &#x25E6; Probleme la softwareul instalat\n"
-" &#x25E6; Pachete neoficiale care nu se găsesc în Ubuntu\n"
-" &#x25E6; Modificări normale într-o versiune beta Ubuntu"
+" * O actualizare anterioară nefinalizată\n"
+" * Probleme la softwareul instalat\n"
+" * Pachete neoficiale care nu se găsesc în Ubuntu\n"
+" * Modificări normale într-o versiune beta Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
