--- a/po/ru.po
+++ b/po/ru.po
@@ -1794,10 +1794,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Обычное обновление не может быть расчитано, пожалуйста, запустите: \n"
@@ -1805,10 +1805,10 @@ msgstr ""
 "\n"
 "\n"
 "Это может быть вызвано:\n"
-" ◦ Предыдущим обновлением, которые не было завершено\n"
-" ◦ Проблемами с отдельными установленными пакетами или программами\n"
-" ◦ Неофицальными пакетами, которые не поддерживаются Ubuntu\n"
-" ◦ Естественными изменениями в предварительной версии Ubuntu"
+" * Предыдущим обновлением, которые не было завершено\n"
+" * Проблемами с отдельными установленными пакетами или программами\n"
+" * Неофицальными пакетами, которые не поддерживаются Ubuntu\n"
+" * Естественными изменениями в предварительной версии Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1959,19 +1959,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Запустить частичное обновление дистрибутива с установкой по возможности "
 "максимального количества обновлений.\n"
 "Возможные причины:\n"
 "\n"
-"&#x25E6; Предыдущая попытка обновления дистрибутива не завершилась\n"
-"&#x25E6; Проблема с каким-либо установленным ПО\n"
-"&#x25E6; Неофициальные пакеты, непредоставляемые Ubuntu\n"
-"&#x25E6; Нормальные изменения предрелизной версии Ubuntu"
+"* Предыдущая попытка обновления дистрибутива не завершилась\n"
+"* Проблема с каким-либо установленным ПО\n"
+"* Неофициальные пакеты, непредоставляемые Ubuntu\n"
+"* Нормальные изменения предрелизной версии Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
