--- a/po/sk.po
+++ b/po/sk.po
@@ -1799,10 +1799,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Bežnú aktualizáciu nemožno vypočítať, spustite prosím: \n"
@@ -1810,10 +1810,10 @@ msgstr ""
 "\n"
 "\n"
 "Tento problém mohlo spôsobiť:\n"
-"◦ neukončená predošlá aktualizácia\n"
-"◦ problém s niektorým z nainštalovaného softvéru\n"
-"◦ neoficiálne balíky softvéru, ktoré neposkytol tím Ubuntu\n"
-"◦ bežné zmeny zatiaľ nevydanej novej verzie Ubuntu"
+"* neukončená predošlá aktualizácia\n"
+"* problém s niektorým z nainštalovaného softvéru\n"
+"* neoficiálne balíky softvéru, ktoré neposkytol tím Ubuntu\n"
+"* bežné zmeny zatiaľ nevydanej novej verzie Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1962,19 +1962,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Spustiť čiastočnú aktualizáciu, aby sa nainštalovalo čo najviac "
 "aktualizácií. \n"
 "\n"
 "Dôvodom môže byť:\n"
-" &#x25E6; Nedokončená predošlá aktualizácia\n"
-" &#x25E6; Problém s niektorým nainštalovaným softvérom\n"
-" &#x25E6; Neoficiálne balíky softvéru, ktoré nepochádzajú z Ubuntu\n"
-" &#x25E6; Bežné zmeny vo verzii Ubuntu pred vydaním"
+" * Nedokončená predošlá aktualizácia\n"
+" * Problém s niektorým nainštalovaným softvérom\n"
+" * Neoficiálne balíky softvéru, ktoré nepochádzajú z Ubuntu\n"
+" * Bežné zmeny vo verzii Ubuntu pred vydaním"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
