--- a/po/sl.po
+++ b/po/sl.po
@@ -1811,10 +1811,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Ni možno izračunati navadne nadgradnje, prosim zaženite: \n"
@@ -1822,10 +1822,10 @@ msgstr ""
 "\n"
 "\n"
 "Vzrok za težavo je lahko v:\n"
-" ◦ nedokončani predhodni nadgradnji,\n"
-" ◦ težave z nekaterimi nameščenimi paketi,\n"
-" ◦ paketi, nepodprti s strani Ubuntuja,\n"
-" ◦ običajne spremembe v Ubuntujem pred uradno izdajo."
+" * nedokončani predhodni nadgradnji,\n"
+" * težave z nekaterimi nameščenimi paketi,\n"
+" * paketi, nepodprti s strani Ubuntuja,\n"
+" * običajne spremembe v Ubuntujem pred uradno izdajo."
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1975,18 +1975,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Poženite delno nadgraditev, da namestite čim več posodobitev. \n"
 "\n"
 "Vzrok temu je lahko:\n"
-" &#x25E6; Prejšnja nadgradnja, ki se ni zaključila\n"
-" &#x25E6; Težave z nekaterimi od nameščenih programov\n"
-" &#x25E6; Neuradni paketi programov, ki jih ne zagotavlja Ubuntu\n"
-" &#x25E6; Normalne spremembe pred-izdajne različice Ubuntuja"
+" * Prejšnja nadgradnja, ki se ni zaključila\n"
+" * Težave z nekaterimi od nameščenih programov\n"
+" * Neuradni paketi programov, ki jih ne zagotavlja Ubuntu\n"
+" * Normalne spremembe pred-izdajne različice Ubuntuja"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
