--- a/po/sq.po
+++ b/po/sq.po
@@ -1787,10 +1787,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Një përditësim normal nuk mund të llogaritet, ju lutemi nisni: \n"
@@ -1798,10 +1798,10 @@ msgstr ""
 "\n"
 "\n"
 "Kjo mund të shkaktohet nga:\n"
-" ◦ Një përditësim i mëparshëm që nuk është kompletuar\n"
-" ◦ Probleme me disa nga programet e instaluara\n"
-" ◦ paketa jo zyrtare të programeve që nuk jepen nga Ubuntu\n"
-" ◦ Ndryshime normale të versioneve të testimit të Ubuntu"
+" * Një përditësim i mëparshëm që nuk është kompletuar\n"
+" * Probleme me disa nga programet e instaluara\n"
+" * paketa jo zyrtare të programeve që nuk jepen nga Ubuntu\n"
+" * Ndryshime normale të versioneve të testimit të Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1952,19 +1952,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Nisni një përditësim të pjesshëm, për të instaluar sa më tepër përditësime "
 "që të jetë e mundur. \n"
 "\n"
 "Kjo mund të jetë shkaktuar nga:\n"
-" &#x25E6; Një përditësim i mëparshëm nuk është kompletuar\n"
-" &#x25E6; Probleme me disa nga programet e instaluara\n"
-" &#x25E6; Paketa jo zyrtare të programeve që nuk jepen nga Ubuntu\n"
-" &#x25E6; Ndryshime normale të versionit të para nisjes së Ubuntu"
+" * Një përditësim i mëparshëm nuk është kompletuar\n"
+" * Probleme me disa nga programet e instaluara\n"
+" * Paketa jo zyrtare të programeve që nuk jepen nga Ubuntu\n"
+" * Ndryshime normale të versionit të para nisjes së Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
