--- a/po/sv.po
+++ b/po/sv.po
@@ -1785,10 +1785,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "En vanlig uppgradering kan inte beräknas. Kör: \n"
@@ -1796,10 +1796,10 @@ msgstr ""
 "\n"
 "\n"
 "Detta kan orsakas av:\n"
-" ◦ En tidigare uppgradering som inte färdigställdes\n"
-" ◦ Problem med någon installerad programvara\n"
-" ◦ Inofficiella programpaket som inte tillhandahållts av Ubuntu\n"
-" ◦ Vanliga ändringar för en förutgåva av Ubuntu"
+" * En tidigare uppgradering som inte färdigställdes\n"
+" * Problem med någon installerad programvara\n"
+" * Inofficiella programpaket som inte tillhandahållts av Ubuntu\n"
+" * Vanliga ändringar för en förutgåva av Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1948,19 +1948,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Kör en delvis uppgradering för att installera så många uppdatering som "
 "möjligt. \n"
 "\n"
 "Detta kan ha orsakats av:\n"
-" &#x25E6; En tidigare uppgradering som inte färdigställdes\n"
-" &#x25E6; Problem med delar av den installerade programvaran\n"
-" &#x25E6; Inofficiella programpaket som inte har tillhandahållts av Ubuntu\n"
-" &#x25E6; Vanliga ändringar i en förutgåva av Ubuntu"
+" * En tidigare uppgradering som inte färdigställdes\n"
+" * Problem med delar av den installerade programvaran\n"
+" * Inofficiella programpaket som inte har tillhandahållts av Ubuntu\n"
+" * Vanliga ändringar i en förutgåva av Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
