--- a/po/th.po
+++ b/po/th.po
@@ -1710,10 +1710,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "การปรับปรุงแบบปกติไม่สามารถคำนวนได้ กรุณาใช้คำสั่ง: \n"
@@ -1721,10 +1721,10 @@ msgstr ""
 "\n"
 "\n"
 "ปัญหาอาจจะเกิดมาจาก:\n"
-" ◦ การปรับปรุงครั้งก่อนไม่สมบรูณ์\n"
-" ◦ มีปัญหากับซอฟต์แวร์ที่ถูกติดตั้ง\n"
-" ◦ ซอฟต์แวร์แพคเกจที่ไม่ได้มาจากอูบุนตูอย่างเป็นทางการ\n"
-" ◦ การปรับปรุงแบบปกติของรุ่นก่อนออกใช้ของอูบุนตู"
+" * การปรับปรุงครั้งก่อนไม่สมบรูณ์\n"
+" * มีปัญหากับซอฟต์แวร์ที่ถูกติดตั้ง\n"
+" * ซอฟต์แวร์แพคเกจที่ไม่ได้มาจากอูบุนตูอย่างเป็นทางการ\n"
+" * การปรับปรุงแบบปกติของรุ่นก่อนออกใช้ของอูบุนตู"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1874,10 +1874,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
@@ -2284,17 +2284,17 @@ msgstr ""
 #~ "Run a partial upgrade, to install as many updates as possible. \n"
 #~ "\n"
 #~ "This can be caused by:\n"
-#~ " ◦ A previous upgrade which didn't complete\n"
-#~ " ◦ Unofficial software packages not provided by Ubuntu\n"
-#~ " ◦ Normal changes of a pre-release version of Ubuntu"
+#~ " * A previous upgrade which didn't complete\n"
+#~ " * Unofficial software packages not provided by Ubuntu\n"
+#~ " * Normal changes of a pre-release version of Ubuntu"
 #~ msgstr ""
 #~ "คุณต้องปรับรุ่นเพียงบางส่วน "
 #~ "เพื่อติดตั้งแพกเกจปรับรุ่นให้มากที่สุดเท่าที่จะทำได้\n"
 #~ "\n"
 #~ "เหตุนี้อาจเกิดจาก:\n"
-#~ " ◦ การปรับรุ่นครั้งก่อนยังไม่เสร็จสมบูรณ์\n"
-#~ " ◦ มีแพกเกจที่ไม่มีการสนับสนุนอย่างเป็นทางการ\n"
-#~ " ◦ เป็นการเปลี่ยนแปลงตามปกติของรุ่นที่ยังพัฒนาไม่เสร็จ"
+#~ " * การปรับรุ่นครั้งก่อนยังไม่เสร็จสมบูรณ์\n"
+#~ " * มีแพกเกจที่ไม่มีการสนับสนุนอย่างเป็นทางการ\n"
+#~ " * เป็นการเปลี่ยนแปลงตามปกติของรุ่นที่ยังพัฒนาไม่เสร็จ"
 
 #~ msgid ""
 #~ "The upgrade aborts now. Please report this bug against the 'update-manager' "
