--- a/po/tr.po
+++ b/po/tr.po
@@ -1757,10 +1757,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Normal bir yükseltme hesaplanamadı, lütfen çalıştırın: \n"
@@ -1768,10 +1768,10 @@ msgstr ""
 "\n"
 "\n"
 "Buna neden olabilecekler:\n"
-" ◦ Önceki bir tamamlanmamış yükseltme\n"
-" ◦ Yüklenmiş yazılım ile olan sorunlar\n"
-" ◦ Ubuntu tarafından sağlanmamış resmi olmayan yazılım paketleri\n"
-" ◦ Bir Ubuntu önsürümünün normal değişiklikleri"
+" * Önceki bir tamamlanmamış yükseltme\n"
+" * Yüklenmiş yazılım ile olan sorunlar\n"
+" * Ubuntu tarafından sağlanmamış resmi olmayan yazılım paketleri\n"
+" * Bir Ubuntu önsürümünün normal değişiklikleri"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1923,19 +1923,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Mümkün olduğunca çok güncelleme kurmak için kısmi bir yükseltme "
 "gerçekleştir. \n"
 "\n"
 "Şu sebepler yüzünden olmuş olabilir:\n"
-" &#x25E6; Tamamlanmamış önceki bir yükseltme\n"
-" &#x25E6; Bazı kurulu yazılımlardaki sorunlar\n"
-" &#x25E6; Ubuntu tarafından sunulmayan gayri resmi yazılım paketleri\n"
-" &#x25E6; Ubuntu'nun yayın öncesi bir sürümünün olağan değişiklikleri"
+" * Tamamlanmamış önceki bir yükseltme\n"
+" * Bazı kurulu yazılımlardaki sorunlar\n"
+" * Ubuntu tarafından sunulmayan gayri resmi yazılım paketleri\n"
+" * Ubuntu'nun yayın öncesi bir sürümünün olağan değişiklikleri"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
