--- a/po/uk.po
+++ b/po/uk.po
@@ -1794,10 +1794,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Нормальне оновлення не може бути оброблене, будь-ласка запустіть: \n"
@@ -1805,10 +1805,10 @@ msgstr ""
 "\n"
 "\n"
 "Це може бути спричинене:\n"
-" ◦ Незавершеним останнім оновленням\n"
-" ◦ Проблемами з деяким встановленним програмним забезпеченням\n"
-" ◦ Неофіційним програмним забезпеченням, яке не підтримується Ubuntu\n"
-" ◦ Нормальними змінами у попередніх випусках Ubuntu"
+" * Незавершеним останнім оновленням\n"
+" * Проблемами з деяким встановленним програмним забезпеченням\n"
+" * Неофіційним програмним забезпеченням, яке не підтримується Ubuntu\n"
+" * Нормальними змінами у попередніх випусках Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1958,19 +1958,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Виконати часткове обновлення, що здійснить максимально можливу інсталяцію "
 "оновлень. \n"
 "\n"
 "Це може бути викликано:\n"
-" &#x25E6; попереднім обновленням, яке ще не завершено\n"
-" &#x25E6; проблемами з деяким встановленими програмами\n"
-" &#x25E6; неофіційними пакетами програм, що не постачається з Ubuntu\n"
-" &#x25E6; нормальними змінами пре-реліз версії Ubuntu"
+" * попереднім обновленням, яке ще не завершено\n"
+" * проблемами з деяким встановленими програмами\n"
+" * неофіційними пакетами програм, що не постачається з Ubuntu\n"
+" * нормальними змінами пре-реліз версії Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
