--- a/po/vi.po
+++ b/po/vi.po
@@ -1705,10 +1705,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Không thể nâng cấp theo cách bình thường, vui lòng chạy: \n"
@@ -1716,10 +1716,10 @@ msgstr ""
 "\n"
 "\n"
 "Nó có thể do những nguyên nhân:\n"
-" ◦ Một nâng cấp trước đó không hoàn thành\n"
-" ◦ Có lỗi khi cài đặt một số phần mềm\n"
-" ◦ Những gói phần mềm không được cung cấp bởi Ubuntu\n"
-" ◦ Những thay đổi bình thường của phiên bản Ubuntu thử nghiệm trước khi phát "
+" * Một nâng cấp trước đó không hoàn thành\n"
+" * Có lỗi khi cài đặt một số phần mềm\n"
+" * Những gói phần mềm không được cung cấp bởi Ubuntu\n"
+" * Những thay đổi bình thường của phiên bản Ubuntu thử nghiệm trước khi phát "
 "hành"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
@@ -1865,10 +1865,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
