--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1621,10 +1621,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "一个普通升级无法被计算，请运行： \n"
@@ -1632,10 +1632,10 @@ msgstr ""
 "\n"
 "\n"
 "这可能是因为：\n"
-" ◦ 先前的升级尚未完成\n"
-" ◦ 已安装软件的问题\n"
-" ◦ 不是由 Ubuntu 提供的非官方软件包\n"
-" ◦ Ubuntu 的预发行版本的标准更改"
+" * 先前的升级尚未完成\n"
+" * 已安装软件的问题\n"
+" * 不是由 Ubuntu 提供的非官方软件包\n"
+" * Ubuntu 的预发行版本的标准更改"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1782,18 +1782,18 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "执行一次部分升级，安装尽可能多的更新。 \n"
 "\n"
 "这可能是下面的情况引起的:\n"
-" &#x25E6; 前一次升级没有完成\n"
-" &#x25E6; 一些已经安装的软件的问题\n"
-" &#x25E6;Ubuntu 不支持的非官方软件包\n"
-" &#x25E6;Ubuntu 预发布版本的正常变动"
+" * 前一次升级没有完成\n"
+" * 一些已经安装的软件的问题\n"
+" *Ubuntu 不支持的非官方软件包\n"
+" *Ubuntu 预发布版本的正常变动"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
