--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -1621,10 +1621,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "無法計算標準升級，請執行： \n"
@@ -1632,10 +1632,10 @@ msgstr ""
 "\n"
 "\n"
 "可能造成的原因為：\n"
-" ◦ 前次升級未完成\n"
-" ◦ 某些已安裝之軟件有問題\n"
-" ◦ 不是由 Ubuntu 提供之非官方套件\n"
-" ◦ 先期釋出之 Ubuntu 版本的正常更動"
+" * 前次升級未完成\n"
+" * 某些已安裝之軟件有問題\n"
+" * 不是由 Ubuntu 提供之非官方套件\n"
+" * 先期釋出之 Ubuntu 版本的正常更動"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1782,17 +1782,17 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "進行一個部份升級，將盡量安裝更多的更新。 \n"
 "這可能由以下造成的：\n"
-"&#x25E6; 上次升級未完成\n"
-"&#x25E6; 某些已安裝軟件有問題\n"
-"&#x25E6; 安裝非由 Ubuntu 提供的非官方軟件套件\n"
-"&#x25E6; Ubuntu 預視版本的正常變更"
+"* 上次升級未完成\n"
+"* 某些已安裝軟件有問題\n"
+"* 安裝非由 Ubuntu 提供的非官方軟件套件\n"
+"* Ubuntu 預視版本的正常變更"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
