--- a/po/et.po
+++ b/po/et.po
@@ -1733,10 +1733,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Tavalist uuendust pole võimalik rehkendada, käivita \n"
@@ -1744,10 +1744,10 @@ msgstr ""
 "\n"
 "\n"
 "Seda võib põhjustada:\n"
-" ◦ Eelmine pooleli jäänud uuendus\n"
-" ◦ Tõrked paigaldatud tarkvaraga\n"
-" ◦ Mitteametlikud pakid, mida ei jaga Ubuntu\n"
-" ◦ Ubuntu eelväljalaske tavapärased muutused"
+" * Eelmine pooleli jäänud uuendus\n"
+" * Tõrked paigaldatud tarkvaraga\n"
+" * Mitteametlikud pakid, mida ei jaga Ubuntu\n"
+" * Ubuntu eelväljalaske tavapärased muutused"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1891,10 +1891,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
