--- a/po/it.po
+++ b/po/it.po
@@ -1807,10 +1807,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Impossibile calcolare un avanzamento normale, eseguire: \n"
@@ -1818,10 +1818,10 @@ msgstr ""
 "\n"
 "\n"
 "Questo può essere causato da:\n"
-" ◦ un precedente avanzamento di versione che non è stato completato;\n"
-" ◦ problemi con alcuni software installati;\n"
-" ◦ pacchetti software non ufficiali non forniti da Ubuntu;\n"
-" ◦ normali cambiamenti di una versione di pre-rilascio di Ubuntu."
+" * un precedente avanzamento di versione che non è stato completato;\n"
+" * problemi con alcuni software installati;\n"
+" * pacchetti software non ufficiali non forniti da Ubuntu;\n"
+" * normali cambiamenti di una versione di pre-rilascio di Ubuntu."
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1972,19 +1972,19 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Eseguire un avanzamento di versione parziale per installare più "
 "aggiornamenti possibile. \n"
 "\n"
 "Le cause possono essere:\n"
-" &#x25E6; Un avanzamento precedente non completato\n"
-" &#x25E6; Problemi con alcuni programmi installati\n"
-" &#x25E6; Pacchetti software non ufficiali non forniti da Ubuntu\n"
-" &#x25E6; Normali cambiamenti di una versione pre-rilascio di Ubuntu"
+" * Un avanzamento precedente non completato\n"
+" * Problemi con alcuni programmi installati\n"
+" * Pacchetti software non ufficiali non forniti da Ubuntu\n"
+" * Normali cambiamenti di una versione pre-rilascio di Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
