--- a/po/nl.po
+++ b/po/nl.po
@@ -1805,10 +1805,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Er kon geen normale upgrade berekend worden, voer uit: \n"
@@ -1816,10 +1816,10 @@ msgstr ""
 "\n"
 "\n"
 "Dit kan veroorzaakt worden door:\n"
-" ◦ Een vorige update die niet voltooid werd\n"
-" ◦ Problemen met de geïnstalleerde software\n"
-" ◦ Onofficiële softwarepakketten die niet door Ubuntu geleverd worden\n"
-" ◦ Normale veranderingen van een pre-release versie van Ubuntu"
+" * Een vorige update die niet voltooid werd\n"
+" * Problemen met de geïnstalleerde software\n"
+" * Onofficiële softwarepakketten die niet door Ubuntu geleverd worden\n"
+" * Normale veranderingen van een pre-release versie van Ubuntu"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1970,20 +1970,20 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "Een gedeeltelijke upgrade uitvoeren, om zoveel mogelijk updates te "
 "installeren. \n"
 "\n"
 "Dit kan verzoorzaakt worden door:\n"
-" &#x25E6; Een vorige upgrade die niet werd voltooid\n"
-" &#x25E6; Problemen met de geïnstalleerde software\n"
-" &#x25E6; Onofficiële softwarepakketten die niet ondersteund worden door "
+" * Een vorige upgrade die niet werd voltooid\n"
+" * Problemen met de geïnstalleerde software\n"
+" * Onofficiële softwarepakketten die niet ondersteund worden door "
 "Ubuntu\n"
-" &#x25E6; Normale wijzigingen in een vooruitgave van Ubuntu"
+" * Normale wijzigingen in een vooruitgave van Ubuntu"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
