--- a/po/sr.po
+++ b/po/sr.po
@@ -1766,10 +1766,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "Не могу да припремим нормално ажурирање, молим покрените:\n"
@@ -1777,10 +1777,10 @@ msgstr ""
 "\n"
 "\n"
 "Узрок овоме је:\n"
-" ◦ Претходна незавршена надоградња\n"
-" ◦ Проблеми са неким инсталираним програмима\n"
-" ◦ Незванични софтверски пакети\n"
-" ◦ Нормалне промене раних издања дистрибуције"
+" * Претходна незавршена надоградња\n"
+" * Проблеми са неким инсталираним програмима\n"
+" * Незванични софтверски пакети\n"
+" * Нормалне промене раних издања дистрибуције"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1925,10 +1925,10 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 
 #: ../data/glade/UpdateManager.ui.h:20
