--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -1623,10 +1623,10 @@ msgid ""
 "\n"
 "\n"
 "This can be caused by:\n"
-" ◦ A previous upgrade which didn't complete\n"
-" ◦ Problems with some of the installed software\n"
-" ◦ Unofficial software packages not provided by Ubuntu\n"
-" ◦ Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "\n"
 "無法計算標準升級，請執行： \n"
@@ -1634,10 +1634,10 @@ msgstr ""
 "\n"
 "\n"
 "可能造成的原因為：\n"
-" ◦ 前次升級未完成\n"
-" ◦ 某些已安裝之軟體有問題\n"
-" ◦ 不是由 Ubuntu 提供之非官方套件\n"
-" ◦ 先期釋出之 Ubuntu 版本的正常更動"
+" * 前次升級未完成\n"
+" * 某些已安裝之軟體有問題\n"
+" * 不是由 Ubuntu 提供之非官方套件\n"
+" * 先期釋出之 Ubuntu 版本的正常更動"
 
 #: ../UpdateManagerText/UpdateManagerText.py:117
 msgid "Downloading changelog"
@@ -1784,17 +1784,17 @@ msgid ""
 "Run a partial upgrade, to install as many updates as possible. \n"
 "\n"
 "This can be caused by:\n"
-" &#x25E6; A previous upgrade which didn't complete\n"
-" &#x25E6; Problems with some of the installed software\n"
-" &#x25E6; Unofficial software packages not provided by Ubuntu\n"
-" &#x25E6; Normal changes of a pre-release version of Ubuntu"
+" * A previous upgrade which didn't complete\n"
+" * Problems with some of the installed software\n"
+" * Unofficial software packages not provided by Ubuntu\n"
+" * Normal changes of a pre-release version of Ubuntu"
 msgstr ""
 "運行一個部份升級，將盡量安裝更多的更新。 \n"
 "這可能由以下造成的：\n"
-"&#x25E6; 一個未完成的前次升級\n"
-"&#x25E6; 某些已安裝軟體的問題\n"
-"&#x25E6; Ubuntu 不提供非官方軟體套件\n"
-"&#x25E6; 一個 Ubuntu pre-release 的一般變更"
+"* 一個未完成的前次升級\n"
+"* 某些已安裝軟體的問題\n"
+"* Ubuntu 不提供非官方軟體套件\n"
+"* 一個 Ubuntu pre-release 的一般變更"
 
 #: ../data/glade/UpdateManager.ui.h:20
 msgid "Settings..."
